Fixed vertical align of the header content.
Add new p with the resume.

--- a/assets/sass/sandbox/base/_headings.scss
+++ b/assets/sass/sandbox/base/_headings.scss
@@ -17,7 +17,7 @@ h1 {
 }
 
 h2 {
-  font-size: 2.5rem;
+  font-size: 2.3rem;
   line-height: 1.2;
 }
 
