--- a/assets/sass/sandbox/objects/_content.scss
+++ b/assets/sass/sandbox/objects/_content.scss
@@ -15,7 +15,7 @@
   flex-direction: column;
   
   @media screen and (min-width: $tablet) {
-    flex: 0 0 30%;
+    flex: 0 0 40%;
   }
 }
 
@@ -23,7 +23,7 @@
   padding: 30px 30px 130px;
   
   @media screen and (min-width: $tablet) {
-    flex: 0 0 70%;
+    flex: 0 0 60%;
     overflow-Y: scroll;
     padding: 30px;
   }
