--- a/assets/sass/sandbox/objects/_icons.scss
+++ b/assets/sass/sandbox/objects/_icons.scss
@@ -32,3 +32,8 @@ Icons classes built on sprites or svg. Use the i tag as acronym of icon. Hilario
 .icon-social {
   fill: $golden;
 }
+
+.icon-arrow {
+  fill: $white;
+  vertical-align: middle;
+}
